# campo-conecta-back

./: README.md  database_compose.yaml  orders.json  products.json  pyproject.toml  suppliers.json
app/: dependencies.py  errors.py  main.py  models.py
app/database/: connection.py
app/database/functions/: auth.py  order.py  populate.py  product.py
app/routers/: auth.py  order.py  populate.py  product.py
app/schemas/: Auth.py  Product.py  User.py  Utils.py  order.py  supplier.py
